fix(WIP): scrollbar now shows up in the child div

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,4 @@
-html {
-  overflow-y: scroll;
-}
+html,
 body {
   padding: 0;
   margin: 0;
